--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./style/reset.css"> -->
+    <link rel="stylesheet" href="./style/reset.css">
     <link rel="stylesheet" href="./style/styles.css">
     <title>Fullscreen Landing</title>
   </head>
@@ -17,6 +17,7 @@
         <p class="text-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis quaerat, odio magnam
           aliquid qui architecto.</p>
         <a href="#" class="button">Read More</a>
+      </section>
     </header>
     <main>
       <section class="bgdark">
@@ -35,23 +36,24 @@
         </p>
       </section>
       <section>
-        <article class="bgdark">
+        <h2 class="section-title">Lorem ipsum dolor sit amet.</h2>
+        <article class="bgdark ">
           <h2 class="section-title">Lorem ipsum dolor sit amet.</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam pariatur ea expedita
             adipisci aliquam alias,
             earum tempora unde? Iste illo eius ipsa esse atque odio?</p>
         </article>
-        <article class="bglightness">
+        <article class="bglight">
           <h2 class="section-title">Lorem ipsum dolor sit amet.</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis dolores ducimus, dolore
-            impedit dolor
-            quod ut, laudantium accusantium nisi voluptatibus voluptatem molestias! Delectus, quia sed!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam pariatur ea expedita
+            adipisci aliquam alias,
+            earum tempora unde? Iste illo eius ipsa esse atque odio?</p>
         </article>
-        <article class="bgdark">
+        <article class="bgdark ">
           <h2 class="section-title">Lorem ipsum dolor sit amet.</h2>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi deleniti aperiam libero
-            quaerat, amet autem
-            necessitatibus facere aut aliquam doloribus, laudantium in maxime saepe ab!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam pariatur ea expedita
+            adipisci aliquam alias,
+            earum tempora unde? Iste illo eius ipsa esse atque odio?</p>
         </article>
       </section>
     </main>
