--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
 
   <body>
     <header>
-      <section class="section">
+      <div class="header">
         <h1 class="title">Wecome To The Beach</h1>
         <p class="text-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis quaerat, odio magnam
           aliquid qui architecto.</p>
         <a href="#" class="button">Read More</a>
-      </section>
+      </div>
     </header>
     <main>
       <section class="bgdark">
-        <h2 class="section-title">Lorem ipsum dolor sit amet.</h2>
+        <h2>Lorem ipsum dolor sit amet.</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia voluptatibus voluptas officiis ducimus
           aliquam. Laboriosam, eos doloremque sint illum ducimus quas dolorem voluptatum quidem fugit minus, ullam error
           porro, aut veritatis nostrum voluptatibus. Molestiae est ex magni saepe quod, sit unde amet iusto laboriosam
           qui reprehenderit corporis aspernatur mollitia ullam!</p>
       </section>
       <section class="bglight">
-        <h2 class="section-title">Lorem ipsum dolor sit amet.</h2>
+        <h2>Lorem ipsum dolor sit amet.</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem laudantium quisquam sint ad nihil repellendus
           neque fuga in qui voluptate. Quibusdam in assumenda modi libero dolore, quod iusto nostrum nulla voluptatibus.
           Aliquid odio eum, eos mollitia veritatis dicta eaque possimus corporis quae unde! Cumque corporis iusto vero
@@ -36,27 +36,25 @@
         </p>
       </section>
       <section>
-        <h2 class="section-title">Lorem ipsum dolor sit amet.</h2>
-        <article class="bgdark ">
-          <h2 class="section-title">Lorem ipsum dolor sit amet.</h2>
+        <section class="bgdark column">
+          <h2>Lorem ipsum dolor sit amet.</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam pariatur ea expedita
             adipisci aliquam alias,
             earum tempora unde? Iste illo eius ipsa esse atque odio?</p>
-        </article>
-        <article class="bglight">
-          <h2 class="section-title">Lorem ipsum dolor sit amet.</h2>
+        </section>
+        <section class="bglight column">
+          <h2>Lorem ipsum dolor sit amet.</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam pariatur ea expedita
             adipisci aliquam alias,
             earum tempora unde? Iste illo eius ipsa esse atque odio?</p>
-        </article>
-        <article class="bgdark ">
-          <h2 class="section-title">Lorem ipsum dolor sit amet.</h2>
+        </section>
+        <section class="bgdark column">
+          <h2>Lorem ipsum dolor sit amet.</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam pariatur ea expedita
             adipisci aliquam alias,
             earum tempora unde? Iste illo eius ipsa esse atque odio?</p>
-        </article>
+        </section>
       </section>
     </main>
   </body>
-
 </html>
